# graphics-for-UI

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/CookieClicker/: CMakeLists.txt  main.cpp
examples/Minesweeper/: CMakeLists.txt  main.cpp
examples/Table/: CMakeLists.txt  main.cpp
include/graphicsForUI/: button.h  defaultMenu.h  elementList.h  grid.h  groupElement.h  labelElement.h  mouseHandle.h  slider.h  textBox.h  uiElement.h  uiMenu.h
src/: CMakeLists.txt  button.cpp  defaultMenu.cpp  elementList.h  grid.cpp  groupElement.cpp  labelElement.cpp  mouseHandle.cpp  slider.cpp  textBox.cpp  uiElement.cpp  uiMenu.cpp
